cập nhật responsive mobile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="main">
+      <!--START Header-->
       <div class="header">
         <div class="container">
           <div class="header-wrap">
@@ -35,7 +36,9 @@
           </div>
           </div>
       </div>
-      <!--Banner box-->
+      <!--END Header-->
+
+      <!--START Banner-->
       <div class="banner">
         <div class="container">
           <div class="banner-box">
@@ -49,36 +52,38 @@
           </div>
         </div>
       </div>
-      <!--Banner box-->
+      <!--END Banner-->
 
-      <!--Content box-->
+      <!--START Content-->
       <div class="content">
-        <div class="container">
-          <!--Content About-->
-          <div class="content-section" id="section-About">
-            <h2 class="section-heading">About Us</h2>
-            <p class="section-sub-heading">
-              Divide have don't main wherein air fourth. Own itself make have
-              night won't make.
-            </p>
-            <p class="section-sub-heading">
-              A you under Seed appear which good give. Own give air without fowl
-              moveth dry first
-            </p>
-            <p class="section-sub-heading">
-              heaven fruit, she'd won't very all.
-            </p>
-            <div class="section-image">
-              <img
-                src="./frontend/image/signature_cropped_2.png"
-                alt="Chu ky"
-              />
+        <!--START Content-About-->
+        <div class="content-section">
+          <div class="container">
+            <div class="content-section" id="section-About">
+              <h2 class="section-heading">About Us</h2>
+              <p class="section-sub-heading">
+                Divide have don't main wherein air fourth. Own itself make have
+                night won't make.
+              </p>
+              <p class="section-sub-heading">
+                A you under Seed appear which good give. Own give air without fowl
+                moveth dry first
+              </p>
+              <p class="section-sub-heading">
+                heaven fruit, she'd won't very all.
+              </p>
+              <div class="section-image">
+                <img
+                  src="./frontend/image/signature_cropped_2.png"
+                  alt="Chu ky"
+                />
+              </div>
             </div>
           </div>
         </div>
-        <!--Content About-->
+        <!--END Content-About-->
 
-        <!--Content-Skills-->
+        <!--START Content-Skills-->
         <div class="content-skills" id="section-work">
           <div class="container">
             <div class="skill-box">
@@ -111,9 +116,9 @@
             </div>
           </div>
         </div>
-        <!--Content-Skills-->
+        <!--END Content-Skills-->
 
-        <!--Content-stat-->
+        <!--START Content-Stat-->
         <div class="content-stat">
           <div class="container">
             <div class="content-stat-wrap">
@@ -151,143 +156,133 @@
             </div>
           </div>
         </div>
-        <!--Content stat-->
+        <!--END Content-Stat-->
 
-        <!--Content grid-->
+        <!--START Content-Grid-->
         <div class="content-grid">
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
-          <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+          <div class="grid-top">
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+          </div>
+          <div class="grid-bottom">
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+            <div class="grid-box"><i class="fa-solid fa-eye grid-icon"></i></div>
+          </div>
         </div>
-        <!--Content grid-->
+        <!--END Content-Grid-->
 
         <div class="content-load">
           <p class="load-title">LOAD MORE WORK</p>
         </div>
 
-        <!--Content video-->
-        <div class="container">
-          <div class="content-section" id="section-process">
-            <h2 class="section-heading">Our Work Process</h2>
-            <p class="section-sub-heading">
-              Was years is seasons was there form he in in them together over that,
-            </p>
-            <p class="section-sub-heading">
-              third sixth gathered female creeping bearing behold years.
-            </p>
-          </div>
-        </div>
-        <div class="container">
-          <div class="section-video">
-            <div class="section-play-video">
-              <i class="fa fa-play play-icon"></i>
+        <!--START Content-video-->
+        <div class="content-video">
+          <div class="container">
+            <div class="content-section" id="section-process">
+              <h2 class="section-heading">Our Work Process</h2>
+              <p class="section-sub-heading">
+                Was years is seasons was there form he in in them together over that,
+              </p>
+              <p class="section-sub-heading">
+                third sixth gathered female creeping bearing behold years.
+              </p>
+            </div>
+            <div class="section-video">
+              <div class="section-play-video">
+                <i class="fa fa-play play-icon"></i>
+              </div>
             </div>
           </div>
         </div>
-        <!--Content video-->
+        <!--END Content-video-->
 
-        <!--Content career-->
+        <!--START Content-career-->
         <div class="content-career" id="section-services">
           <div class="container">
-            <div class="content-career-wrap">
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-gem career-icon"></i>
-                <h4 class="career-title">UI/UX DESIGN</h4>
-                <p class="career-label">
-                  Be set fourth land god darkness<br>
-                  make it wherein own
-                </p>
+            <div class="content-career-top">
+              <div class="career-box">
+                  <i class="fas fa-gem career-icon"></i>
+                  <h4 class="career-title">UI/UX DESIGN</h4>
+                  <p class="career-label">
+                    Be set fourth land god darkness<br>
+                    make it wherein own
+                  </p>
               </div>
-            </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-chart-line career-icon"></i>
-                <h4 class="career-title">WEB DEVELOPMENT</h4>
-                <p class="career-label">
-                  A she'd them bring void moving<br>
-                  third she'd kind fill
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-chart-line career-icon"></i>
+                  <h4 class="career-title">WEB DEVELOPMENT</h4>
+                  <p class="career-label">
+                    A she'd them bring void moving<br>
+                    third she'd kind fill
+                  </p>
               </div>
-            </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-mobile-alt career-icon"></i>
-                <h4 class="career-title">APP / MOBILE</h4>
-                <p class="career-label">
-                  Dominion man second sprit he.<br>
-                  earth they're creeping
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-mobile-alt career-icon"></i>
+                  <h4 class="career-title">APP / MOBILE</h4>
+                  <p class="career-label">
+                    Dominion man second sprit he.<br>
+                    earth they're creeping
+                  </p>
               </div>
-            </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-gamepad career-icon"></i>
-                <h4 class="career-title">GAME DESIGN</h4>
-                <p class="career-label">
-                  Morning his saying moveth it<br>
-                  multiply appear life be
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-gamepad career-icon"></i>
+                  <h4 class="career-title">GAME DESIGN</h4>
+                  <p class="career-label">
+                    Morning his saying moveth it<br>
+                    multiply appear life be
+                  </p>
               </div>
             </div>
+            
+            <div class="content-career-bottom">
+              <div class="career-box">
+                  <i class="fas fa-plane career-icon"></i>
+                  <h4 class="career-title">SEO / MARKETING</h4>
+                  <p class="career-label">
+                    Give won't after land fill creeping<br>
+                    meat you, may
+                  </p>
+              </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-plane career-icon"></i>
-                <h4 class="career-title">SEO / MARKETING</h4>
-                <p class="career-label">
-                  Give won't after land fill creeping<br>
-                  meat you, may
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-star career-icon"></i>
+                  <h4 class="career-title">PHOTOGRAPHY</h4>
+                  <p class="career-label">
+                    Creepeth one seas cattle grass<br>
+                    give morning saw give
+                  </p>
               </div>
-            </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-star career-icon"></i>
-                <h4 class="career-title">PHOTOGRAPHY</h4>
-                <p class="career-label">
-                  Creepeth one seas cattle grass<br>
-                  give morning saw give
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-wand-magic-sparkles career-icon"></i>
+                  <h4 class="career-title">GRAPHIC DESIGN</h4>
+                  <p class="career-label">
+                    Open, reat whales air rule for,<br>
+                    fourth life whales
+                  </p>
               </div>
-            </div>
 
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-wand-magic-sparkles career-icon"></i>
-                <h4 class="career-title">GRAPHIC DESIGN</h4>
-                <p class="career-label">
-                  Open, reat whales air rule for,<br>
-                  fourth life whales
-                </p>
+              <div class="career-box">
+                  <i class="fas fa-fill-drip career-icon"></i>
+                  <h4 class="career-title">ILLUSTRATIONS</h4>
+                  <p class="career-label">
+                    Whales likeness hath, man kind<br>
+                    for them air two won't
+                  </p>
               </div>
-            </div>
-
-            <div class="career-box">
-              <div class="container">
-                <i class="fas fa-fill-drip career-icon"></i>
-                <h4 class="career-title">ILLUSTRATIONS</h4>
-                <p class="career-label">
-                  Whales likeness hath, man kind<br>
-                  for them air two won't
-                </p>
-              </div>
-            </div>
             </div>
           </div>
         </div>
-        <!--Content career-->
+        <!--END Content-career-->
 
-        <!--Content testimonials-->
+        <!--START Content-testimonials-->
         <div class="content-testimonials" id="section-testimonials">
           <p class="testimonials-mess">
             "Out standing job and exceeded all expectations. It was a pleasure<br>
@@ -296,21 +291,23 @@
           </p>
           <p class="testimonials-name">MICHAEL HOPKINS</p>
         </div>
-        <!--Content testimonials-->
+        <!--END Content-testimonials-->
 
-        <!--Content Badge Logo-->
-        <div class="container">
-          <div class="content-badge-logo">
-            <div class="badge-logo1"><img src="./frontend/image/handmade_transparent_clean.png" alt=""></div>
-            <div class="badge-logo2"><img src="./frontend/image/mountain_transparent_clean.png" alt=""></div>
-            <div class="badge-logo3"><img src="./frontend/image/collection_logo_transparent.png" alt=""></div>
-            <div class="badge-logo4"><img src="./frontend/image/mountainbike_logo_transparent.png" alt=""></div>
-            <div class="badge-logo1"><img src="./frontend/image/handmade_transparent_clean.png" alt=""></div>
+        <!--START Content-Badge-Logo-->
+        <div class="content-badge-logo">
+          <div class="container">
+            <div class="badge-logo-wrap">
+              <div class="badge-logo"><img src="./frontend/image/handmade_transparent_clean.png" alt="" class="badge-logo1"></div>
+              <div class="badge-logo"><img src="./frontend/image/mountain_transparent_clean.png" alt="" class="badge-logo2"></div>
+              <div class="badge-logo"><img src="./frontend/image/collection_logo_transparent.png" alt="" class="badge-logo3"></div>
+              <div class="badge-logo"><img src="./frontend/image/mountainbike_logo_transparent.png" alt="" class="badge-logo4"></div>
+              <div class="badge-logo"><img src="./frontend/image/handmade_transparent_clean.png" alt=""class="badge-logo1"></div>
+            </div>
           </div>
         </div>
-        <!--Content Badge Logo-->
+        <!--END Content-Badge-Logo-->
 
-        <!--Content Contact-->
+        <!--START Content-Contact-->
         <div class="content-contact" id="section-contact">
           <div class="container">
             <div class="content-section">
@@ -322,9 +319,7 @@
                 if this could be the start of something beautiful.
               </p>
             </div>
-          </div>
           
-          <div class="container">
             <div class="content-contact-form">
               <div class="contact-row">
                 <div class="contact-col">
@@ -344,7 +339,10 @@
             </div>
           </div>
         </div>
-        <!--Content Contact-->
+        <!--END Content-Contact-->
+      </div>
+
+      <!--START Footer-->
       <div class="footer">
         <div class="container">
           <div class="footer-wrap">
@@ -393,6 +391,7 @@
           </div>
         </div>
       </div>
+      <!--END Footer-->
     </div>
   </body>
   <script>
