sửa phần footer

--- a/index.html
+++ b/index.html
@@ -362,31 +362,31 @@
             </div>
 
             <div class="footer-heading">
-              <p class="name-heading">
-                Project<br>
-                About<br>
-                Services<br>
-                Carreer
-              </p>
+              <ul class="name-heading">
+                <li><a href="">Project</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Carrerr</a></li>
+              </ul>
             </div>
 
             <div class="footer-choice">
-              <p class="name-choice">
-                News<br>
-                Events<br>
-                Contact<br>
-                Legals
-              </p>
+              <ul class="name-choice">
+                <li><a href="">News</a></li>
+                <li><a href="">Events</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Legals</a></li>
+              </ul>
             </div>
 
             
             <div class="footer-app">
-              <p class="name-app">
-                Facebook<br>
-                Twitter<br>
-                Instagram<br>
-                Dribble
-              </p>
+              <ul class="name-app">
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Dribble</a></li>
+              </ul>
             </div>
           </div>
         </div>
