Thêm js và sửa giao diện

--- a/index.html
+++ b/index.html
@@ -21,21 +21,14 @@
               <img src="./frontend/image/logo_guess_transparent.png" alt="LOGO" />
             </div>
             <div class="ham" id="toggle">
-             <i class="fas fa-bars menu-icon"></i>
+              <i class="fas fa-bars menu-icon-open" id="isOpen"></i>
+              <i class="fa-solid fa-xmark menu-icon-close" id="isClose"></i>
             </div>
-            <ul class="nav">
-              <li><a href="">HOME</a></li>
-              <li><a href="#section-About">ABOUT</a></li>
-              <li><a href="#section-work">WORK</a></li>
-              <li><a href="#section-process">PROCESS</a></li>
-              <li><a href="#section-services">SERVICES</a></li>
-              <li><a href="#section-testimonials">TESTIMONIALS</a></li>
-              <li><a href="#section-contact">CONTACT</a></li>
-            </ul>
-          </div>
-          <div class="header-wrap-sp" id="mobileMenu">
-            <div class="wrapper">
-              <ul class="nav-menu-mobile" id="mobile-nav">
+            <div class="nav" id="nav">
+              <ul class="nav-list">
+                <div class="nav-logo">
+                  <img src="./frontend/image/logo_guess_transparent.png" alt="LOGO" />
+                </div>
                 <li><a href="">HOME</a></li>
                 <li><a href="#section-About">ABOUT</a></li>
                 <li><a href="#section-work">WORK</a></li>
@@ -367,38 +360,40 @@
             </div>
 
             <div class="footer-contact">
-              <p class="contact-text">
-                hello@pirolltheme.com<br>
-                +44 987 065 908
-              </p>
-            </div>
-
-            <div class="footer-heading">
-              <ul class="name-heading">
-                <li><a href="">Project</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Carrerr</a></li>
+              <ul class="contact-text">
+                <li><a href="thanhtien4112006@gmail.com">hello@pirolltheme.com</a></li>
+                <li><a href="#+44 987 065 908">+44 987 065 908</a></li>
               </ul>
             </div>
-
-            <div class="footer-choice">
-              <ul class="name-choice">
-                <li><a href="">News</a></li>
-                <li><a href="">Events</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Legals</a></li>
-              </ul>
-            </div>
-
             
-            <div class="footer-app">
-              <ul class="name-app">
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Dribble</a></li>
-              </ul>
+            <div class="footer-title">
+              <div class="footer-heading">
+                <ul class="name-heading">
+                  <li><a href="">Project</a></li>
+                  <li><a href="">About</a></li>
+                  <li><a href="">Services</a></li>
+                  <li><a href="">Carrerr</a></li>
+                </ul>
+              </div>
+  
+              <div class="footer-choice">
+                <ul class="name-choice">
+                  <li><a href="">News</a></li>
+                  <li><a href="">Events</a></li>
+                  <li><a href="">Contact</a></li>
+                  <li><a href="">Legals</a></li>
+                </ul>
+              </div>
+  
+              
+              <div class="footer-app">
+                <ul class="name-app">
+                  <li><a href="">Facebook</a></li>
+                  <li><a href="">Twitter</a></li>
+                  <li><a href="">Instagram</a></li>
+                  <li><a href="">Dribble</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -406,5 +401,5 @@
       <!--END Footer-->
     </div>
   </body>
-  <script src="./frontend/js/mobile.js"></script>
+  <script src="./frontend/js/script.js"></script>
 </html>
