Thêm style tổng thể Layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="nav__logo">
                   <img src="./frontend/image/logo_guess_transparent.png" alt="LOGO" />
                 </div>
-                <li><a href="">HOME</a></li>
+                <li><a href="#section-home">HOME</a></li>
                 <li><a href="#section-About">ABOUT</a></li>
                 <li><a href="#section-work">WORK</a></li>
                 <li><a href="#section-process">PROCESS</a></li>
@@ -45,7 +45,7 @@
       <!--END Header-->
 
       <!--START Banner-->
-      <div class="banner">
+      <div class="banner" id="section-home">
         <div class="banner__container container">
           <div class="banner__box">
             <h1 class="box__title">We Design and Develop</h1>
@@ -317,6 +317,15 @@
               </p>
               <p class="testimonials__name">MICHAEL HOPKINS</p>
             </div>
+
+            <div class="swiper-slide">
+              <p class="testimonials__mess">
+                "Out standing job and exceeded all expectations. It was a pleasure<br>
+                to work with them on a sizable first project and am looking<br>
+                forward to stat-number the next one asap."
+              </p>
+              <p class="testimonials__name">MICHAEL HOPKINS</p>
+            </div>
           </div>
 
           <div class="swiper-button-prev"></div>
@@ -425,10 +434,15 @@
             </div>
           </div>
         </div>
+        <div class="chat">
+          <div class="chat__icon">
+            <i class="fab fa-facebook-messenger"></i>
+          </div>
+        </div>
       </div>
       <!--END Footer-->
     </div>
   </body>
-  <script src="./frontend/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="./frontend/js/script.js"></script>
 </html>
