--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__container container">
           <div class="header__wrap">
             <div class="header__logo">
-              <img src="./frontend/image/logo_guess_transparent.png" alt="LOGO" />
+              <img src="./frontend/image/logo.png" alt="LOGO" />
             </div>
             <div class="header__ham" id="toggle">
               <i class="fas fa-bars" id="isOpen"></i>
@@ -28,7 +28,7 @@
             <div class="nav" id="nav">
               <ul class="nav__list">
                 <div class="nav__logo">
-                  <img src="./frontend/image/logo_guess_transparent.png" alt="LOGO" />
+                  <img src="./frontend/image/logo.png" alt="LOGO" />
                 </div>
                 <li><a href="#section-home">HOME</a></li>
                 <li><a href="#section-About">ABOUT</a></li>
@@ -339,11 +339,11 @@
         <div class="badge">
           <div class="container">
             <div class="badge__wrap">
-              <div class="badge__logo"><img src="./frontend/image/handmade_transparent_clean.png" alt="LOGO1"></div>
-              <div class="badge__logo"><img src="./frontend/image/mountain_transparent_clean.png" alt="LOGO2"></div>
-              <div class="badge__logo"><img src="./frontend/image/collection_logo_transparent.png" alt="LOGO3"></div>
-              <div class="badge__logo"><img src="./frontend/image/mountainbike_logo_transparent.png" alt="LOGO4"></div>
-              <div class="badge__logo"><img src="./frontend/image/handmade_transparent_clean.png" alt="LOGO5"></div>
+              <div class="badge__logo"><img src="./frontend/image/handmade_transparent_clean.png" class="logo-move-left" alt="LOGO1"></div>
+              <div class="badge__logo"><img src="./frontend/image/mountain_transparent_clean.png" class="logo-move-right" alt="LOGO2"></div>
+              <div class="badge__logo"><img src="./frontend/image/collection_logo_transparent.png" class="logo-move-left" alt="LOGO3"></div>
+              <div class="badge__logo"><img src="./frontend/image/mountainbike_logo_transparent.png" class="logo-move-right" alt="LOGO4"></div>
+              <div class="badge__logo"><img src="./frontend/image/handmade_transparent_clean.png" class="logo-move-left" alt="LOGO5"></div>
             </div>
           </div>
         </div>
